--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         {
         	#playbutton
         	{
-        		visibility: show;
+        		visibility: show !important;
         	}
         }
 
