--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
 			</a>
 		</div>
 
-		<div id="playbutton">
+		<div id="playbutton" class = "wrapper">
 			<a onclick="document.getElementById('music').play()" class="button">
-				<img src="playbutton.png">
+				<img src="playbutton.png" width="500" height="500" border="0">
 			</a>​
 		</div>
 
-		<div id="flipclock" class="countdown"></div>
+		<div id="flipclock" class="countdown">
+		</div>
 
 		<script type="text/javascript">
 			var clock;
