Added autoplay back

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 				setInterval(timeUpdate,1000);
 			}
 		</script>
-		<audio id="music" hidden loop>
+		<audio id="music" hidden autoplay loop>
 		</audio>
 	</body>
 </html>
