--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
         	#playbutton
         	{
         		visibility: visible !important;
+        		position: absolute;
+        		bottom: 35%;
+        		left: 50%;
+        		margin: -125px 0 0 -125px;
+        	}
+        	#logo
+        	{
+        		top: 35% !important;
         	}
         }
 
