--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				if (myAudio.paused) 
 				{
 					myAudio.play();
-					document.getElementById("playbutton").src = "pausebutton.png"
+					document.getElementById("playbutton").src = "pausebutton.jpg"
 				} 
 				else 
 				{
