--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<div id="playbutton" class = "wrapper">
 			<a onclick="aud_play_pause()" class="button">
-				<img id = "playbuttonimg" src="playbutton.png" width="400" height="400" border="0">
+				<img id = "playbuttonimg" src="playbutton.png" width="300" height="300" border="0">
 			</a>​
 		</div>
 
@@ -158,7 +158,7 @@
 				if (myAudio.paused) 
 				{
 					myAudio.play();
-					document.getElementById("playbuttonimg").src = "pausebutton.jpg"
+					document.getElementById("playbuttonimg").src = "pausebutton.png"
 				} 
 				else 
 				{
