--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 		<div id="playbutton" class = "wrapper">
 			<a onclick="aud_play_pause()" class="button">
-				<img id = "playbuttonimg" src="playbutton.png" width="250" height="250" border="0">
-			</a>​
+				<img id = "playbuttonimg" src="playbutton.png">
+			</a>​\
+			}
 		</div>
 
 		<div id="flipclock" class="countdown">
