--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					else if (flags[5] == false && time.getHours() >= 20 && time.getHours() < 24)
 					{
 						document.body.style.backgroundImage = "url('video/8PM12AM.gif')";
-						document.getElementById("music").src = "music/4PM8PM.mp3";
+						document.getElementById("music").src = "music/8PM12AM.mp3";
 						resetAllOtherFlags(5);
 					}
 				}
