Update Soundcloud URL

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 
 		<div id = "logo" class = "wrapper">
-			<a href="https://soundcloud.com/suh-hyun-kwon">
+			<a href="https://soundcloud.com/sarah_suhhyun_kwon">
 				<img id = "logosize" src="logo.png" width="500" height="500" border="0">
 			</a>
 		</div>
