Update Page Connections

--- a/etiquette.html
+++ b/etiquette.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Guide</a>
+                        <a href="index.html">Guide</a>
                     </li>
                     <li>
                         <a href="etiquette.html">Etiquette</a>
