--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
 </head>
 
@@ -72,41 +73,41 @@
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="centerdiv" align="center">
                   <canvas class="canvas" id="canvas1" width="800" height="600"></canvas>
-                    <image id="image1" class="sample" src="assets/dimsum-01.png"></image>
-                    <image id="image2" class="sample" src="assets/dimsum-02.png"></image>
-                    <image id="image3" class="sample" src="assets/dimsum-03.png"></image>
-                    <image id="image4" class="sample" src="assets/dimsum-04.png"></image>
-                    <image id="key" class="sample" src="assets/key.png"></image>
+                    <image id="image1" class="sample" src="assets/dimsum-final-01.png"></image>
+                    <image id="image2" class="sample" src="assets/dimsum-final-02.png"></image>
+                    <image id="image3" class="sample" src="assets/dimsum-final-03.png"></image>
+                    <image id="image4" class="sample" src="assets/dimsum-final-04.png"></image>
+                    <image id="key" class="sample" src="assets/newicons.png"></image>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="centerdiv" align="center">
                   <canvas class="canvas" id="canvas2" width="800" height="600"></canvas>
-                    <image id="image5" class="sample" src="assets/dimsum-05.png"></image>
-                    <image id="image6" class="sample" src="assets/dimsum-06.png"></image>
-                    <image id="image7" class="sample" src="assets/dimsum-07.png"></image>
-                    <image id="image8" class="sample" src="assets/dimsum-08.png"></image>
+                    <image id="image5" class="sample" src="assets/dimsum-final-05.png"></image>
+                    <image id="image6" class="sample" src="assets/dimsum-final-06.png"></image>
+                    <image id="image7" class="sample" src="assets/dimsum-final-07.png"></image>
+                    <image id="image8" class="sample" src="assets/dimsum-final-08.png"></image>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="centerdiv" align="center">
                   <canvas class="canvas" id="canvas3" width="800" height="600"></canvas>
-                    <image id="image9" class="sample" src="assets/dimsum-09.png"></image>
-                    <image id="image10" class="sample" src="assets/dimsum-10.png"></image>
-                    <image id="image11" class="sample" src="assets/dimsum-11.png"></image>
-                    <image id="image12" class="sample" src="assets/dimsum-12.png"></image>
+                    <image id="image9" class="sample" src="assets/dimsum-final-09.png"></image>
+                    <image id="image10" class="sample" src="assets/dimsum-final-10.png"></image>
+                    <image id="image11" class="sample" src="assets/dimsum-final-11.png"></image>
+                    <image id="image12" class="sample" src="assets/dimsum-final-12.png"></image>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="centerdiv" align="center">
                   <canvas class="canvas" id="canvas4" width="800" height="600"></canvas>
-                    <image id="image13" class="sample" src="assets/dimsum-13.png"></image>
-                    <image id="image14" class="sample" src="assets/dimsum-14.png"></image>
-                    <image id="image15" class="sample" src="assets/dimsum-15.png"></image>
-                    <image id="image16" class="sample" src="assets/dimsum-16.png"></image>
+                    <image id="image13" class="sample" src="assets/dimsum-final-13.png"></image>
+                    <image id="image14" class="sample" src="assets/dimsum-final-14.png"></image>
+                    <image id="image15" class="sample" src="assets/dimsum-final-15.png"></image>
+                    <image id="image16" class="sample" src="assets/dimsum-final-16.png"></image>
                 </div>
             </div>
         </div>
