--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
                     <image id="image2" class="sample" src="assets/dimsum-final-02.png"></image>
                     <image id="image3" class="sample" src="assets/dimsum-final-03.png"></image>
                     <image id="image4" class="sample" src="assets/dimsum-final-04.png"></image>
-                    <image id="key" class="sample" src="assets/newicons.png"></image>
+                    <image id="info1" class="sample" src="assets/chicken feet.png"></image>
+                    <image id="info2" class="sample" src="assets/soup dumplings.jpg"></image>
+                    <image id="info3" class="sample" src="assets/barbecue pork.png"></image>
+                    <image id="info4" class="sample" src="assets/siu mai.png"></image>
+                    <image id="key" class="sample" src="assets/icons.png"></image>
                 </div>
             </div>
             <div class="item">
@@ -88,6 +92,10 @@
                     <image id="image6" class="sample" src="assets/dimsum-final-06.png"></image>
                     <image id="image7" class="sample" src="assets/dimsum-final-07.png"></image>
                     <image id="image8" class="sample" src="assets/dimsum-final-08.png"></image>
+                    <image id="info5" class="sample" src="assets/congee.png"></image>
+                    <image id="info6" class="sample" src="assets/har gao.png"></image>
+                    <image id="info7" class="sample" src="assets/sticky rice.png"></image>
+                    <image id="info8" class="sample" src="assets/pork buns.png"></image>
                 </div>
             </div>
             <div class="item">
@@ -98,6 +106,10 @@
                     <image id="image10" class="sample" src="assets/dimsum-final-10.png"></image>
                     <image id="image11" class="sample" src="assets/dimsum-final-11.png"></image>
                     <image id="image12" class="sample" src="assets/dimsum-final-12.png"></image>
+                    <image id="info9" class="sample" src="assets/custard buns.png"></image>
+                    <image id="info10" class="sample" src="assets/mango pudding.png"></image>
+                    <image id="info11" class="sample" src="assets/spring rolls.png"></image>
+                    <image id="info12" class="sample" src="assets/sesame balls.png"></image>
                 </div>
             </div>
             <div class="item">
@@ -108,6 +120,10 @@
                     <image id="image14" class="sample" src="assets/dimsum-final-14.png"></image>
                     <image id="image15" class="sample" src="assets/dimsum-final-15.png"></image>
                     <image id="image16" class="sample" src="assets/dimsum-final-16.png"></image>
+                    <image id="info13" class="sample" src="assets/pineapple buns.png"></image>
+                    <image id="info14" class="sample" src="assets/rice noodle roll.png"></image>
+                    <image id="info15" class="sample" src="assets/radish cakes.png"></image>
+                    <image id="info16" class="sample" src="assets/egg tarts.png"></image>
                 </div>
             </div>
         </div>
