--- a/guide.html
+++ b/guide.html
@@ -39,12 +39,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Dim Sum</a>
+                <a class="navbar-brand" href="./">Dim Sum</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="guide.html">Guide</a>
+                        <a href="#">Guide</a>
                     </li>
                     <li>
                         <a href="etiquette.html">Etiquette</a>
