Updated href on all pages

--- a/etiquette.html
+++ b/etiquette.html
@@ -38,15 +38,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Dim Sum</a>
+                <a class="navbar-brand" href="./">Dim Sum</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Guide</a>
+                        <a href="guide.html">Guide</a>
                     </li>
                     <li>
-                        <a href="etiquette.html">Etiquette</a>
+                        <a href="#">Etiquette</a>
                     </li>
                     <li>
                         <a href="quiz.html">Quiz</a>
