--- a/quiz.html
+++ b/quiz.html
@@ -58,13 +58,6 @@
 
     <!-- Full Page Image Background Carousel Header -->
     <header id="myCarousel" class="carousel slide">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
 
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
@@ -79,51 +72,15 @@
                     <image id="key" class="sample" src="assets/key.png"></image>
                 </div>
             </div>
-            <div class="item">
-                <!-- Set the second background image using inline CSS below. -->
-                <div class="centerdiv" align="center">
-                  <canvas class="canvas" id="canvas2" width="800" height="600"></canvas>
-                    <image id="image5" class="sample" src="assets/sample.png"></image>
-                    <image id="image6" class="sample" src="assets/sample.png"></image>
-                    <image id="image7" class="sample" src="assets/sample.png"></image>
-                    <image id="image8" class="sample" src="assets/sample.png"></image>
-                </div>
-            </div>
-            <div class="item">
-                <!-- Set the third background image using inline CSS below. -->
-                <div class="centerdiv" align="center">
-                  <canvas class="canvas" id="canvas3" width="800" height="600"></canvas>
-                    <image id="image9" class="sample" src="assets/sample.png"></image>
-                    <image id="image10" class="sample" src="assets/sample.png"></image>
-                    <image id="image11" class="sample" src="assets/sample.png"></image>
-                    <image id="image12" class="sample" src="assets/sample.png"></image>
-                </div>
-            </div>
-            <div class="item">
-                <!-- Set the third background image using inline CSS below. -->
-                <div class="centerdiv" align="center">
-                  <canvas class="canvas" id="canvas4" width="800" height="600"></canvas>
-                    <image id="image13" class="sample" src="assets/sample.png"></image>
-                    <image id="image14" class="sample" src="assets/sample.png"></image>
-                    <image id="image15" class="sample" src="assets/sample.png"></image>
-                    <image id="image16" class="sample" src="assets/sample.png"></image>
-                </div>
-            </div>
         </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="icon-prev"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="icon-next"></span>
-        </a>
 
     </header>
 
     <script src="js/jquery.js"></script>
 
     <script src="js/bootstrap.min.js"></script>
+
+    <script src="js/quiz.js"></script>
 </body>
 
 </html>
