Updated image repository for quiz

--- a/quiz.html
+++ b/quiz.html
@@ -66,11 +66,19 @@
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="centerdiv" align="center">
                   <canvas class="canvas" id="canvas1" width="800" height="600"></canvas>
-                    <image id="image1" class="sample" src="assets/sample.png"></image>
-                    <image id="image2" class="sample" src="assets/sample.png"></image>
-                    <image id="image3" class="sample" src="assets/sample.png"></image>
-                    <image id="image4" class="sample" src="assets/sample.png"></image>
-                    <image id="key" class="sample" src="assets/key.png"></image>
+                    <image id="image1" class="sample" src="assets/dimsum-final-14.png"></image>
+                    <image id="image2" class="sample" src="assets/dimsum-final-05.png"></image>
+                    <image id="image3" class="sample" src="assets/dimsum-final-01.png"></image>
+                    <image id="image5" class="sample" src="assets/dimsum-final-06.png"></image>
+                    <image id="image6" class="sample" src="assets/dimsum-final-04.png"></image>
+                    <image id="image7" class="sample" src="assets/dimsum-final-02.png"></image>
+                    <image id="image8" class="sample" src="assets/dimsum-final-07.png"></image>
+                    <image id="image9" class="sample" src="assets/dimsum-final-08.png"></image>
+                    <image id="image10" class="sample" src="assets/dimsum-final-03.png"></image>
+                    <image id="image11" class="sample" src="assets/dimsum-final-13.png"></image>
+                    <image id="image12" class="sample" src="assets/dimsum-final-12.png"></image>
+                    <image id="image13" class="sample" src="assets/dimsum-final-10.png"></image>
+                    <image id="image14" class="sample" src="assets/dimsum-final-16.png"></image>
                 </div>
             </div>
         </div>
