updated buggy images

--- a/guide.html
+++ b/guide.html
@@ -78,7 +78,7 @@
                     <image id="image3" class="sample" src="assets/dimsum-final-03.png"></image>
                     <image id="image4" class="sample" src="assets/dimsum-final-04.png"></image>
                     <image id="info1" class="sample" src="assets/chicken feet.png"></image>
-                    <image id="info2" class="sample" src="assets/soup dumplings.jpg"></image>
+                    <image id="info2" class="sample" src="assets/soup dumplings.png"></image>
                     <image id="info3" class="sample" src="assets/barbecue pork.png"></image>
                     <image id="info4" class="sample" src="assets/siu mai.png"></image>
                     <image id="key" class="sample" src="assets/icons.png"></image>
