Updated key in guide

--- a/guide.html
+++ b/guide.html
@@ -81,7 +81,8 @@
                     <image id="info2" class="sample" src="assets/soup dumplings.png"></image>
                     <image id="info3" class="sample" src="assets/barbecue pork.png"></image>
                     <image id="info4" class="sample" src="assets/siu mai.png"></image>
-                    <image id="key" class="sample" src="assets/icons.png"></image>
+                    <image id="key1" class="sample" src="assets/key1.png"></image>
+                    <image id="key2" class="sample" src="assets/key2.png"></image>
                 </div>
             </div>
             <div class="item">
