--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             </div>
         </div>
     </nav>
+    <image class="fullscreen-image" src="assets/home.png"></image>
 
     <script src="js/jquery.js"></script>
 
