--- a/quiz.html
+++ b/quiz.html
@@ -50,7 +50,7 @@
                         <a href="etiquette.html">Etiquette</a>
                     </li>
                     <li>
-                        <a href="#">Quiz</a>
+                        <a href="quiz.html">Quiz</a>
                     </li>
                 </ul>
             </div>
@@ -69,6 +69,7 @@
                     <image id="image1" class="sample" src="assets/dimsum-final-14.png"></image>
                     <image id="image2" class="sample" src="assets/dimsum-final-05.png"></image>
                     <image id="image3" class="sample" src="assets/dimsum-final-01.png"></image>
+                    <image id="image4" class="sample" src="assets/dimsum-final-01.png"></image>
                     <image id="image5" class="sample" src="assets/dimsum-final-06.png"></image>
                     <image id="image6" class="sample" src="assets/dimsum-final-04.png"></image>
                     <image id="image7" class="sample" src="assets/dimsum-final-02.png"></image>
@@ -79,6 +80,8 @@
                     <image id="image12" class="sample" src="assets/dimsum-final-12.png"></image>
                     <image id="image13" class="sample" src="assets/dimsum-final-10.png"></image>
                     <image id="image14" class="sample" src="assets/dimsum-final-16.png"></image>
+                    <image id="yes" class="sample" src="assets/yes.png"></image>
+                    <image id="no" class="sample" src="assets/no.png"></image>
                 </div>
             </div>
         </div>
