--- a/etiquette.html
+++ b/etiquette.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body>
+<body class="etiquette-body">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./">Dim Sum</a>
+                <a class="navbar-brand" href="./">Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -56,7 +56,34 @@
             </div>
         </div>
     </nav>
-    <image class="fullscreen-image" src="assets/etiquette.png"></image>
+
+    <div class="container">
+      <br><br><br><br>
+        <div class="row-fluid">
+        
+            <div class="span10 offsetHalf block">
+              <div class="pull-center">
+              <br>
+                <h1><b>Dim Sum Etiquette</b></h1>
+                <p><b>
+                <h4>Share!</h4> As with most small plates dining, the more people you have and the more dishes you order, the better the experience will be for everyone. Bring people, and be prepared to share.</b></p>
+                <p><b>
+                <h4>Start with tea.</h4> You should be given a pot of tea as soon as you first sit down. Most dim sum restaurants will have a few varieties of tea on hand and will probably get you a different type if you prefer it over their house tea. Check the tea before you pour to make sure it’s steeped enough. When you empty the pot, turn the lid upside down or leave it ajar to let the waiter know you want a refill. To be extra polite, make sure to fill up other people’s glasses before your own.</b></p>
+                <p><b>
+                <h4>Ordering.</h4> This is pretty simple: just let the food come to you. The server will generally offer you each one of the two or three dishes their cart is carrying. Just nod or say “yes” if you’re in. Good rule of thumb: if you’re not sure what it is, try it. Don’t see your favorite dish in the dining room? Most large dim sum restaurants can bring you a fresh one straight from the kitchen—just ask for it. Make sure to keep your card out so the cart pusher can stamp it. If there’s a buffet-style line at the restaurant, bring your card with you when you go there.</b></p>
+                <p><b>
+                <h4>Cart chasing.</h4> You see the dumpling roll cart all the way on the other side of the dining room and you’re afraid they’re going to run out before they make their way over to you. What do you do? It’s perfectly acceptable to get out of your seat and chase down the specific cart you’re looking for. Just don’t swoop in and steal the last one.</b></p>
+                <p><b>
+                <h4>Utensils.</h4> Chopsticks are the norm, but don’t feel bad about asking for a fork if you need one. The basic rules of chopsticks apply: don’t spear your food with them, and don’t leave them sticking straight up in a bowl of rice when you’re not using them. Instead, lay them horizontally on the edge of the plate.</b></p>
+                <p><b>
+                <h4>Want rice with that?</h4> Steamed white rice can be ordered upon request, and it’s a good way to cleanse your palate between bites of strongly seasoned dim sum.</b></p>
+                <p><b>
+                <h4>Do tip!</h4> It may seem unnatural since you usually pay the bill at a separate cashier instead of at the table, but it’s expected to leave a tip on the table for your server and the people pushing the trolleys if you had good service.</b></p>
+                <br>
+              </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/jquery.js"></script>
 
