--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Dim Sum</a>
+                <a class="navbar-brand" href="#">Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -56,8 +56,24 @@
             </div>
         </div>
     </nav>
-    <image class="fullscreen-image" src="assets/home.png"></image>
 
+    <div class="container">
+      <br><br><br><br>
+        <div class="row-fluid">
+            <div class="span5 offsetHalf block">
+              <div class="pull-center">
+              <br>
+                <h1><b>Introduction to Dim Sum</b></h1>
+                <p><b>
+                You all know what dim sum is, right? Food comes served in steam table trolleys stacked high with bamboo or metal steamer baskets. They get pushed around the restaurant from table to table, and diners order by pointing at the dishes they want. Each table gets a card that’s stamped with the number of dishes ordered (generally for a couple bucks apiece, though price can vary by dish), and you pay when you leave.</b></p>
+                <p><b>
+                The original dim sum houses originated in Canton, and were a lot like diners: small, roadside establishments that served tea along with a bit of sustenance for weary travelers or rural workers. These days, in many parts of Southern mainland China, and in Hong Kong in particular, it’s become a weekly ritual family meal, generally taken on weekend mornings.</b></p>
+                <p><b>
+                It’s tough to find a better way to spend a Sunday morning than a table of friends and family, bottomless tea, lightning-fast service, and a whole table full of tiny plates crammed with dumplings, steamed buns, and Chinese pastries. That you usually end up paying no more than a few bucks apiece at a dim sum restaurant (no matter how much you order, it seems) helps, of course.</b></p><br>
+              </div>
+            </div>
+        </div>
+    </div>
     <script src="js/jquery.js"></script>
 
     <script src="js/bootstrap.min.js"></script>
