--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="home-body">
 
 <head>
 
@@ -73,6 +73,29 @@
               </div>
             </div>
         </div>
+    </div>
+    <div class="container">
+      <br><br><br><br>
+        <div class="row-fluid">
+            <div class="span5 offsetHalf block">
+              <div class="pull-center">
+              <br>
+                <h1><b>Top 5 Dim Sum Restaurants to try in Boston, MA</b></h1>
+                <p><b>
+                1. Windsor Café (10 Tyler St)</b></p>
+                <p><b>
+                2. Bubor Cha Cha (45 Beach St)</b></p>
+                <p><b>
+                3. Chau Chow City (83 Essex St)</b></p>
+                <p><b>
+                4. Hei La Moon (88 Beach St)</b></p>
+                <p><b>
+                5. China Pearl Restaurant (9 Tyler St)</b></p>
+                <br>
+              </div>
+            </div>
+        </div>
+        <br>
     </div>
     <script src="js/jquery.js"></script>
 
