--- a/etiquette.html
+++ b/etiquette.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="etiquette-body">
 
 <head>
 
@@ -27,7 +27,7 @@
 
 </head>
 
-<body class="etiquette-body">
+<body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -83,6 +83,7 @@
               </div>
             </div>
         </div>
+        <br>
     </div>
 
     <script src="js/jquery.js"></script>
