--- a/guide.html
+++ b/guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="hide-overflow">
 
 <head>
 
@@ -57,6 +57,9 @@
         </div>
     </nav>
 
+    <image id="key1" class="key1" src="assets/key1.png"></image>
+    <image id="key2" class="key2" src="assets/key2.png"></image>
+
     <!-- Full Page Image Background Carousel Header -->
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
@@ -81,8 +84,6 @@
                     <image id="info2" class="sample" src="assets/soup dumplings.png"></image>
                     <image id="info3" class="sample" src="assets/barbecue pork.png"></image>
                     <image id="info4" class="sample" src="assets/siu mai.png"></image>
-                    <image id="key1" class="sample" src="assets/key1.png"></image>
-                    <image id="key2" class="sample" src="assets/key2.png"></image>
                 </div>
             </div>
             <div class="item">
@@ -136,7 +137,6 @@
         <a class="right carousel-control" href="#myCarousel" data-slide="next">
             <span class="icon-next"></span>
         </a>
-
     </header>
 
     <script src="js/jquery.js"></script>
