--- a/guide.html
+++ b/guide.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>16 Essential Dim Sum Dishes</title>
+    <title>A Guide to Dim Sum</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
