--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="home-body">
+<html lang="en" class="hide-overflow">
 
 <head>
 
@@ -9,13 +9,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>A Guide to Dim Sum</title>
+    <title>Perspective</title>
+
+    <link rel="stylesheet" type="text/css" href="css/fonts/fonts.css" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/full-slider.css" rel="stylesheet">
+    <link href="css/stylesheet.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,80 +25,47 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="favicon.jpg"/>
 
 </head>
 
 <body>
+    <!-- Full Page Image Background Carousel Header -->
+    <header id="myCarousel" class="carousel slide">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Home</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="guide.html">Guide</a>
-                    </li>
-                    <li>
-                        <a href="etiquette.html">Etiquette</a>
-                    </li>
-                    <li>
-                        <a href="quiz.html">Quiz</a>
-                    </li>
-                </ul>
+        <!-- Wrapper for Slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <!-- Set the first background image using inline CSS below. -->
+                <div class="centerdiv" align="center">
+                  <canvas class="canvas" id="canvas" width="800" height="600"></canvas>
+                    <image id="image1" class="canvasImage" src="assets/1.jpg"></image>
+                    <image id="image2" class="canvasImage" src="assets/2.jpg"></image>
+                    <image id="image3" class="canvasImage" src="assets/3.jpg"></image>
+                    <image id="image4" class="canvasImage" src="assets/4.jpg"></image>
+                    <image id="image5" class="canvasImage" src="assets/5.jpg"></image>
+                    <image id="image6" class="canvasImage" src="assets/6.jpg"></image>
+                    <image id="image7" class="canvasImage" src="assets/7.jpg"></image>
+                    <image id="image8" class="canvasImage" src="assets/8.jpg"></image>
+                    <image id="image9" class="canvasImage" src="assets/9.jpg"></image>
+                    <image id="image10" class="canvasImage" src="assets/10.jpg"></image>
+                    <image id="image11" class="canvasImage" src="assets/11.jpg"></image>
+                    <image id="image12" class="canvasImage" src="assets/12.jpg"></image>
+                    <image id="image13" class="canvasImage" src="assets/13.jpg"></image>
+                    <image id="lead" class="canvasImage" src="assets/lead.jpg"></image>
+                    <image id="clincher" class="canvasImage" src="assets/clincher.jpg"></image>
+                    <image id="optimist" class="canvasImage" src="assets/optimist.png"></image>
+                    <image id="pessimist" class="canvasImage" src="assets/pessimist.png"></image>
+                    <image id="best quality" class="canvasImage" src="assets/best-quality.png"></image>
+                    <image id="worst quality" class="canvasImage" src="assets/worst-quality.png"></image>
+                </div>
             </div>
         </div>
-    </nav>
 
-    <div class="container">
-      <br><br><br><br>
-        <div class="row-fluid">
-            <div class="span5 offsetHalf block">
-              <div class="pull-center">
-              <br>
-                <h1><b>Introduction to Dim Sum</b></h1>
-                <p><b>
-                You all know what dim sum is, right? Food comes served in steam table trolleys stacked high with bamboo or metal steamer baskets. They get pushed around the restaurant from table to table, and diners order by pointing at the dishes they want. Each table gets a card that’s stamped with the number of dishes ordered (generally for a couple bucks apiece, though price can vary by dish), and you pay when you leave.</b></p>
-                <p><b>
-                The original dim sum houses originated in Canton, and were a lot like diners: small, roadside establishments that served tea along with a bit of sustenance for weary travelers or rural workers. These days, in many parts of Southern mainland China, and in Hong Kong in particular, it’s become a weekly ritual family meal, generally taken on weekend mornings.</b></p>
-                <p><b>
-                It’s tough to find a better way to spend a Sunday morning than a table of friends and family, bottomless tea, lightning-fast service, and a whole table full of tiny plates crammed with dumplings, steamed buns, and Chinese pastries. That you usually end up paying no more than a few bucks apiece at a dim sum restaurant (no matter how much you order, it seems) helps, of course.</b></p><br>
-              </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-      <br><br><br><br>
-        <div class="row-fluid">
-            <div class="span5 offsetHalf block">
-              <div class="pull-center">
-              <br>
-                <h1><b>Top 5 Dim Sum Restaurants to try in Boston, MA</b></h1>
-                <p><b>
-                1. Windsor Café (10 Tyler St)</b></p>
-                <p><b>
-                2. Bubor Cha Cha (45 Beach St)</b></p>
-                <p><b>
-                3. Chau Chow City (83 Essex St)</b></p>
-                <p><b>
-                4. Hei La Moon (88 Beach St)</b></p>
-                <p><b>
-                5. China Pearl Restaurant (9 Tyler St)</b></p>
-                <br>
-              </div>
-            </div>
-        </div>
-        <br>
-    </div>
+    </header>
+
+    <script src="js/script.js"></script>
+
     <script src="js/jquery.js"></script>
 
     <script src="js/bootstrap.min.js"></script>
