--- a/index.html
+++ b/index.html
@@ -30,45 +30,42 @@
 </head>
 
 <body>
-    <!-- Full Page Image Background Carousel Header -->
-    <header id="myCarousel" class="carousel slide">
+    <div id="vid-box"></div>
 
-        <!-- Wrapper for Slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <!-- Set the first background image using inline CSS below. -->
-                <div class="centerdiv" align="center">
-                  <canvas class="canvas" id="canvas" width="800" height="600"></canvas>
-                    <image id="image1" class="canvasImage" src="assets/1.jpg"></image>
-                    <image id="image2" class="canvasImage" src="assets/2.jpg"></image>
-                    <image id="image3" class="canvasImage" src="assets/3.jpg"></image>
-                    <image id="image4" class="canvasImage" src="assets/4.jpg"></image>
-                    <image id="image5" class="canvasImage" src="assets/5.jpg"></image>
-                    <image id="image6" class="canvasImage" src="assets/6.jpg"></image>
-                    <image id="image7" class="canvasImage" src="assets/7.jpg"></image>
-                    <image id="image8" class="canvasImage" src="assets/8.jpg"></image>
-                    <image id="image9" class="canvasImage" src="assets/9.jpg"></image>
-                    <image id="image10" class="canvasImage" src="assets/10.jpg"></image>
-                    <image id="image11" class="canvasImage" src="assets/11.jpg"></image>
-                    <image id="image12" class="canvasImage" src="assets/12.jpg"></image>
-                    <image id="image13" class="canvasImage" src="assets/13.jpg"></image>
-                    <image id="lead" class="canvasImage" src="assets/lead.jpg"></image>
-                    <image id="clincher" class="canvasImage" src="assets/clincher.jpg"></image>
-                    <image id="optimist" class="canvasImage" src="assets/optimist.png"></image>
-                    <image id="pessimist" class="canvasImage" src="assets/pessimist.png"></image>
-                    <image id="best quality" class="canvasImage" src="assets/best-quality.png"></image>
-                    <image id="worst quality" class="canvasImage" src="assets/worst-quality.png"></image>
-                </div>
-            </div>
-        </div>
+<form name="loginForm" id="login" action="#" onsubmit="return login(this);">
+    <input type="text" name="username" id="username" placeholder="Pick a username!" />
+    <input type="submit" name="login_submit" value="Log In">
+</form>
 
-    </header>
-
-    <script src="js/script.js"></script>
-
-    <script src="js/jquery.js"></script>
-
-    <script src="js/bootstrap.min.js"></script>
+<form name="callForm" id="call" action="#" onsubmit="return makeCall(this);">
+	<input type="text" name="number" placeholder="Enter user to dial!" />
+	<input type="submit" value="Call"/>
+</form>
+<a href="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></a><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" charset="utf-8" async="true"></script>
+<a href="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></a><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" charset="utf-8" async="true"></script>
+<a href="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></a><script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js" charset="utf-8" async="true"></script>
+<a href="https://cdn.pubnub.com/webrtc/webrtc.js"></a><script src="https://cdn.pubnub.com/webrtc/webrtc.js" charset="utf-8" async="true"></script>
+<script>
+var video_out = document.getElementById("vid-box");
+function login(form) {
+	var phone = window.phone = PHONE({
+	    number        : form.username.value || "Anonymous", // listen on username line else Anonymous
+	    publish_key   : 'pub-c-70c7fa21-2d90-43e8-a40e-30a29aeec28c',
+	    subscribe_key : 'sub-c-5da8c080-d4ea-11e8-b5de-7a9ddb77e130',
+	});	
+	phone.ready(function(){ form.username.style.background="#55ff5b"; });
+	phone.receive(function(session){
+	    session.connected(function(session) { video_out.appendChild(session.video); });
+	    session.ended(function(session) { video_out.innerHTML=''; });
+	});
+	return false; 	// So the form does not submit.
+}
+function makeCall(form){
+	if (!window.phone) { alert("Login First!") };
+	else phone.dial(form.number.value);
+	return false;
+}
+</script>
 </body>
 
 </html>
